@@ -27,9 +27,11 @@ public class AutoIncrementTest extends SqlTestCase {
 
     public void testSerial() throws Exception {
         String sql = "create table foo (x serial, y varchar(255))";
-        if (dialect.haveSerial()) {
+        if (dialect.haveSequencySerial() || dialect.haveAutoIncrementSerial()) {
+            assertFalse(dialect.haveSequencySerial() && dialect.haveAutoIncrementSerial());
+
             execute(sql);
-            check(dialect.autoIncrementIsRelativeToLastValue());
+            check(dialect.haveAutoIncrementSerial());
         }
         else {
             expectExecuteFailure(sql, "expected data type but got serial");
@@ -41,7 +43,7 @@ public class AutoIncrementTest extends SqlTestCase {
         if (dialect.haveIdentity()) {
             execute(sql);
             // Hypersonic syntax should imply hypersonic semantics, I guess
-            check(dialect.wishThisWereTrue());
+            check(true);
         }
         else {
             expectExecuteFailure(sql, "expected data type but got identity");
@@ -75,13 +77,7 @@ public class AutoIncrementTest extends SqlTestCase {
     }
     
     private boolean sql2003RelativeToLastValue() {
-        boolean relativeToLastValue = 
-            dialect.autoIncrementIsRelativeToLastValue();
-        if (dialect.expectMayflyBehavior()) {
-            // SQL 2003 syntax should imply SQL 2003 semantics
-            relativeToLastValue = false;
-        }
-        return relativeToLastValue;
+        return dialect.sql2003RelativeToLastValue();
     }
 
     // Derby also has GENERATED ALWAYS
@@ -153,40 +149,43 @@ public class AutoIncrementTest extends SqlTestCase {
     
     /**
      * @internal
-     * Much like {@link #check(boolean)} but just makes sure that it doesn't do
-     * anything special to avoid value conflicts.
+     * Much like {@link #check(boolean)} but also tests that there
+     * is no special case for a sequence value which would violate
+     * a constraint, and the case where a failing command still 
+     * increments the sequence.
      */
     public void testConflicting() throws Exception {
+        String type;
+        if (dialect.haveSequencySerial()) {
+            type = "serial";
+        }
+        else if (dialect.haveSql2003AutoIncrement() 
+            && !sql2003RelativeToLastValue()) {
+            type = "integer generated by default as identity(start with 1)";
+        }
+        else {
+            return;
+        }
+
         execute("create table foo(x " +
-            dialect.identityType() +
-            ", y integer)");
+            type +
+            " primary key, y integer)");
         execute("insert into foo(x, y) values(1, 5)");
-        String insertAnotherOne = "insert into foo(y) values(6)";
-        if (dialect.autoIncrementIsRelativeToLastValue()) {
-            execute(insertAnotherOne);
+        expectExecuteFailure("insert into foo(y) values(6)", 
+            "primary key in table foo, column x: duplicate value 1");
+        
+        String tryAgain = "insert into foo(y) values(77)";
+        if (dialect.wishThisWereTrue()) {
+            execute(tryAgain);
             assertResultSet(new String[] { 
                     " 1, 5 ",
-                    " 2, 6 "
+                    " 2, 77 "
                 }, 
                 query("select x, y from foo"));
         }
         else {
-            expectExecuteFailure(insertAnotherOne, 
+            expectExecuteFailure(tryAgain, 
                 "primary key in table foo, column x: duplicate value 1");
-            
-            String tryAgain = "insert into foo(y) values(77)";
-            if (dialect.wishThisWereTrue()) {
-                execute(tryAgain);
-                assertResultSet(new String[] { 
-                        " 1, 5 ",
-                        " 2, 77 "
-                    }, 
-                    query("select x, y from foo"));
-            }
-            else {
-                expectExecuteFailure(tryAgain, 
-                    "primary key in table foo, column x: duplicate value 1");
-            }
         }
     }
     
