@@ -105,7 +105,7 @@ public class SqlDumperTest extends TestCase {
             "  c TINYINT,\n" +
             "  d SMALLINT,\n" +
             "  e BIGINT,\n" +
-            "  f INTEGER GENERATED BY DEFAULT AS IDENTITY,\n" +
+            "  f INTEGER AUTO_INCREMENT,\n" +
             "  g INTEGER GENERATED BY DEFAULT AS IDENTITY\n" +
             ");\n\n", 
             dump()
